Added dollar sign to the prices

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 		      <p class="hotel-offer_distance">{{ directions.distance_km }} KM ➔ SMF</p>
                     </div>
                     <div class="hotel-offer_price">
-		      <span class="hotel-offer_price-old">{{ cheapest_price.old_price }}</span>
-		      <span class="hotel-offer_price-new">{{ cheapest_price.current_price }}</span>
+		      <span class="hotel-offer_price-old">${{ cheapest_price.old_price }}</span>
+		      <span class="hotel-offer_price-new">${{ cheapest_price.current_price }}</span>
                       <span class="hotel-offer_price-pricing">Nightly</span>
                     </div>
                   </div>
