Added meta HTML tag improving responsiveness of the page on smaller devices

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
   <head>
     <meta charset="utf-8" />
+    <!-- To prevent mobile devices from scaling the page. -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>SMF Hotels</title>
 
     <link rel="stylesheet" href="styles/reset.css" />
