--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
     <script src="scripts/toggle-visibility.js"></script>
     <script src="scripts/photo-gallery.js"></script>
     <script src="scripts/popup.js"></script>
+    <script src="scripts/main.js"></script>
   </head>
   <body class="layout-body">
     <header class="header layout-header">
